# tenko

./: .env.example  404.html  README.md  getrollcall.py  index.html  main.py  mkdocs.yml  nuitka-crash-report.xml  pyproject.toml  remove.bat  requirements.txt  run.txt  sendNum.py  sendRadar.py
.github/workflows/: Build_Linux_Package.yml
au/: auth_modules.py  http_headera.py
dev/: index.html
docs/: dev.md  index.md  user.md
fju/: auth_module.py
schools/: config.py  rollcall.py  select.py
schools/au/: auth.py
schools/fju/: auth.py
schools/tku/: auth.py
search/: search_index.json
tku/: __init__.py  auth_module.py  http_headers.py
ui/: login.py  select.py
user/: index.html
