[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rollcall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "brotli>=1.2.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.scripts]
rollcall = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["api"]
only-include = [
    "main.py",
    "getrollcall.py",
    "sendNum.py",
    "sendRadar.py",
]
