[project]
name = "tenko"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "brotli>=1.2.0",
    "certifi>=2025.11.12",
    "charset-normalizer>=3.4.4",
    "idna>=3.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "textual>=6.6.0",
    "urllib3>=2.5.0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material",
    "pyinstaller>=6.17.0",
]
